@@ -195,7 +195,7 @@ endif()
 set(KERNELS copy_fast copy_pad transpose_fast transpose_pad xaxpy xdot xger
             xgemm xgemm_direct xgemv invert)
 set(DATABASES copy pad padtranspose transpose xaxpy xdot
-              xgemm xgemm_direct xgemv xgemv_fast xgemv_fast_rot xger
+              xgemm xgemm_direct xgemv xgemv_fast xgemv_fast_rot xger invert
               gemm_routine trsv_routine)
 set(ROUTINE_TUNERS xgemm xtrsv)
 set(LEVEL1_ROUTINES xswap xscal xcopy xaxpy xdot xdotu xdotc xnrm2 xasum xamax)
