@@ -1,0 +1,14 @@
+
+// =================================================================================================
+// This file is part of the CLBlast project. The project is licensed under Apache Version 2.0. It
+// is auto-generated by the 'scripts/database/database.py' Python script.
+//
+// This file populates the database with best-found tuning parameters for the 'Invert' kernels.
+//
+// =================================================================================================
+
+#include "database/kernels/invert/invert_16.hpp"
+#include "database/kernels/invert/invert_32.hpp"
+#include "database/kernels/invert/invert_3232.hpp"
+#include "database/kernels/invert/invert_64.hpp"
+#include "database/kernels/invert/invert_6464.hpp"
