@@ -4,6 +4,7 @@ Development (next version)
 - Made it possible to override the tuning parameters in the clients straight from JSON tuning files
 - Added OpenCL pre-processor to unroll loops and perform array-to-register promotions for compilers
   which don't do this themselves (ARM Mali) - greatly improves performance on these platforms
+- Added first tuners for the TRSV (block size) and TRSM (invert kernel) routines
 - Various minor fixes and enhancements
 - Added tuned parameters for various devices (see README)
 
